Run and fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,10 +26,15 @@
 
     .contact-from .form-control {
         padding: 15px;
+        font-size: 16px;
     }
 
     .contact-info {
         line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 17px;
     }
 
     #footer .socials-list a {
