--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,8 @@ html {
     margin-top: 15px;
     border: 1px solid #000;
     text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
